# yes-no-words

./: .gitignore  .pre-commit-config.yaml  README.md  bumpver.toml  justfile  noxfile.py  pyproject.toml  requirements.in  requirements.txt  setup.cfg  test_yes_no_words.py  yes_no_words.py
.github/workflows/: actions.yml  lint.yml  release.yml  test.yml
