[metadata]
name = yes-no-words
version = 2022.4.3
description = Get yes/no-like words.
long_description = file: README.md
long_description_content_type = text/markdown
author = Jeff Triplett
author_email = jeff.triplett@gmail.com
url = https://github.com/jefftriplett/yes-no-words
project_urls =
    Twitter = https://twitter.com/webology
license = Apache License 2.0
keywords = yes no truthy falsy
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
license_file = LICENSE

[options]
include_package_data = True
packages = find:
py_modules = yes_no_words
python_requires = >=3.7
zip_safe = False

[options.packages.find]
exclude=
    tests
    tests.*
